Volga0.3.5 - Updated GPT2 version, rollback Qwen2.5

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/results
-/__pycache__
+/results/
+/__pycache__/
+/*.pyc
+/.gitignore
