Volga0.3.5 - Updated GPT2 version, rollback Qwen2.5

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 /__pycache__/
 /*.pyc
 /.gitignore
+/__pycache__
+/volga_v0.3
+*.pyc
+/__pycache__
+__pycache__/model_training.cpython-312.pyc
+/__pycache__
